--- a/package.json
+++ b/package.json
@@ -104,14 +104,15 @@
       }
     },
     "rules": {
-			"no-tabs": 0,
-			"space-before-function-paren": [
-				1, {
-					"anonymous": "always",
-					"named": "always",
-					"asyncArrow": "always"
-				}
-			],
+      "no-tabs": 0,
+      "space-before-function-paren": [
+        1,
+        {
+          "anonymous": "always",
+          "named": "always",
+          "asyncArrow": "always"
+        }
+      ],
       "arrow-parens": [
         "error",
         "always"
@@ -202,6 +203,7 @@
     "ip": "1.1.3",
     "lodash": "4.16.4",
     "minimist": "1.2.0",
+    "moment": "^2.17.1",
     "react": "15.3.2",
     "react-dom": "15.3.2",
     "react-helmet": "3.1.0",
